# space-thumbnails

./: .gitignore  Cargo.toml  build_msi.ps1  build_release.ps1  deep_clean_step.bat  files.wxs  fix_step_association.bat  force_progid_step.bat  force_step_image_type.bat  generate_loading.py  product.wixobj  product.wxs  setup.iss
.trae/documents/: STEP 解析并行加速方案 (STEP Parsing Parallelization).md  STEP 解析性能优化方案.md  双保险抗裂方案：预先解析与绝对保底.md  实现 5 秒内 STEP 缩略图生成的方案清单.md  强制夺权修复计划：解决 Keyshot 等软件的冲突.md  强制类型伪装：PerceivedType 修复.md  更新日志路径为指定绝对路径.md
control-panel/: App.xaml  App.xaml.cs  ControlPanel.csproj  ControlPanel.sln  ControlPanel_CrashLog.txt  FormatItem.cs  MainWindow.xaml  MainWindow.xaml.cs  RegistryHelper.cs  StatusToStyleConverter.cs  app.manifest
control-panel/Views/: BooksPage.xaml  BooksPage.xaml.cs  ImagesPage.xaml  ImagesPage.xaml.cs  PsdPage.xaml  PsdPage.xaml.cs  TextPage.xaml  TextPage.xaml.cs  ThreeDPage.xaml  ThreeDPage.xaml.cs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  plugins.rs
crates/core/src/plugins/: docx.rs  epub.rs  filament.rs  hdri.rs  illustrator.rs  pdf.rs  psd.rs  text.rs
crates/truck-stepio/src/in/: mod.rs
crates/windows/: Cargo.toml  build.rs
crates/windows-installer/: Cargo.toml
crates/windows-installer/src/: main.rs
crates/windows/src/: constant.rs  lib.rs  utils.rs
crates/windows/src/providers/: thumbnail.rs  thumbnail_file.rs
tools/: png_to_bytes.rs  setup_occ.ps1  step2obj.bat  step2obj.py  step2obj_occ.py  test_print.py  usdz2glb.py  usdz2obj.py
tools/FreeCAD/Ext/PySide/: QtCore.py  QtGui.py  QtSvgWidgets.py  QtUiTools.py  __init__.py
tools/FreeCAD/Mod/Assembly/: Assembly_rc.py
tools/FreeCAD/Mod/Help/: Help_rc.py
tools/FreeCAD/Mod/OpenSCAD/: OpenSCAD_rc.py
tools/FreeCAD/Mod/Tux/: Tux_rc.py
tools/FreeCAD/doc/: ThirdPartyLibraries.html
tools/FreeCAD/lib/: AssemblyApp.pyd  AssemblyGui.pyd  CAMSimulator.pyd  DraftUtils.pyd  Fem.pyd  FemGui.pyd  Import.pyd  ImportGui.pyd  Inspection.pyd  InspectionGui.pyd  MatGui.pyd  Materials.pyd  Measure.pyd  MeasureGui.pyd  Mesh.pyd  MeshGui.pyd  MeshPart.pyd  MeshPartGui.pyd  PartDesignGui.pyd  PartGui.pyd  PathApp.pyd  PathGui.pyd  PathSimulator.pyd  Points.pyd  PointsGui.pyd  QtUnitGui.pyd  ReverseEngineering.pyd  ReverseEngineeringGui.pyd  Robot.pyd  RobotGui.pyd  Sketcher.pyd  Spreadsheet.pyd  SpreadsheetGui.pyd  Start.pyd  StartGui.pyd  Surface.pyd  SurfaceGui.pyd  TechDraw.pyd  Web.pyd  _PartDesign.pyd  (+5 more)
