[package]
name = "space-thumbnails-cli"
version = "1.0.1"
edition = "2021"

[dependencies]
space-thumbnails = { path = "../core" }
clap = { version = "3.1", features = ["derive"] }
image = "0.24"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.34.0", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Threading",
] }
