[package]
name = "space-thumbnails"
version = "1.0.1"
edition = "2021"

[dependencies]
filament-bindings = "0.2.2"
# truck-stepio = { path = "../truck-stepio" }
# truck-meshalgo = "0.2.0"
# truck-polymesh = "0.2.0"
# truck-geometry = "0.2.0"
# truck-topology = "0.2.0"
rayon = "1.5"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
image = "0.24"
test-results = "0.1"

[lib]
crate-type = ["lib"]
