[package]
name = "space-thumbnails"
version = "1.0.1"
edition = "2021"

[dependencies]
filament-bindings = "0.2.2"
truck-stepio = { path = "../truck-stepio" }
truck-meshalgo = "0.4.0"
truck-polymesh = "0.6.0"
truck-geometry = "0.5.0"
truck-topology = "0.6.0"
ruststep = "0.4.0"
rayon = "1.5"
uuid = { version = "1.0", features = ["v4"] }
pdfium-render = "0.8.37"
psd = "0.3.5"
zip = "7.2.0"
imageproc = "0.26.0"
rusttype = "0.9.3"
image = "0.25"
ab_glyph = "0.2.32"

[dev-dependencies]
image = { version = "0.25", features = ["exr", "hdr"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.34.0", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Ole",
] }

[lib]
crate-type = ["lib"]
