[package]
name = "space-thumbnails-windows"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
space-thumbnails = { path = "../core" }
lazy_static = "1.4"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10.9"
hex = "0.4.3"
image = "0.24"

[dependencies.windows]
version = "0.34.0"
features = [
  "alloc",
  "implement",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "Win32_Storage_FileSystem"
]

[build-dependencies]
image = "0.24"
